# zippy

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: build.yml
packaging/: zippy_0.1.0_amd64.deb
packaging/deb/DEBIAN/: control  postinst
src/: install.rs  main.rs  platform.rs  ui.rs  update.rs
